@@ -65,6 +65,7 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/reports/qcreports_db/output/ALL_NewAllele.current.rpt">New Allele Report</A> <B>(acv)</B>
 <LI><A HREF="/data/reports/qcreports_db/output/ALL_RefCounts.rpt">Number of Allele References By Year</A> <B>(csmith, steve-rockwood)</B>
 <LI><A HREF="/data/reports/qcreports_db/output/ALL_ExpressedComp.sql.rpt">Allele Missing Expressed Component Attribute</A> <B>(mnk)</B>
+<LI><A HREF="/data/reports/qcreports_db/output/ALL_WithdrawnMarker.sql.rpt">Alleles with Withdrawn Markers</A> <B>(mnk)</B>
 <LI><A HREF="/data/reports/qcreports_db/archive/alleles">New Allele Archive</A>
 
 </OL>
