@@ -1,3 +1,10 @@
+TAG: qcreports_db-6-0-3-1
+DATE: 04/07/2016
+STAFF: lec
+CHANGES:
+1) TR12314/ALL_WithdrawnMarker.sql
+
+1) needed out join to mcl1
 TAG: qcreports_db-6-0-2-8
 DATE: 02/17/2016
 STAFF: sc
